update backend to function with api plugged directly into call, but for some reason api link isn't working.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="build/css/vendor.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title>Git Selector</title>
+    <title>GitHub User Selector</title>
   </head>
   <body>
     <div class="container">
@@ -17,7 +17,8 @@
         </form>
       </div>
       <div id="errorMessage"></div>
-      <div id="userResults"></div>
+      <div id="showUser"></div>
+      <div id="userData"></div>
       <div id="userRepos"></div>
     </div>
   </body>
