add display user function.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form id="inputForm">
           <label for="userName">Enter a valid Git Hub user name:</label>
           <input id="userName" type="text">
-          <button class="btn-warning">Retrieve User Profile Data!</button>
+          <button class="btn-warning" id="searchBtn">Retrieve User Profile Data!</button>
         </form>
       </div>
       <div id="errorMessage"></div>
